# mymail

backend/: Cargo.toml
backend/.sqlx/: query-03b87b766fb1c787b3bf94160a22fcdf526fa2758a13d415ebddfb8ae42c62d2.json  query-0a35d5dacdcacd77048d74ce670f1020f119103e9e6b620c0a7183877f590caa.json  query-0c5af85d192dd4cfbe1b6194553b24663de32d43ea8a9ff2b8bad17b5911eda3.json  query-0f666dc07fc33bbc2a732be7322c2582254f01c5dfd5b25e9ce2e7018de2e9a5.json  query-2ebb2ec559be1d96e0e56d37f12d8c9e4156a2d6b7fae6ede8d7f2bb2470a160.json  query-322465b9ae06aa868a7b253459c9db6e7f38eaf31a2ef75bfb372eee5c9b1168.json  query-3c46456e425ddcd64526a47b4e3a2c29e613bf53cc67414430c4e00b74a89a2e.json  query-4a022c0ba83c3619f67d21a7d891dd1ef6834d531cb5f6d10b917235402f6f4b.json  query-4f36de844547e9a9dd0cd1d32af70289951dcb06c96f63356201aa4e77deb4e4.json  query-5b3f37a756f196324d77936cfd7d37f5287bcd293bc0c611eadaa2c6dfb49d14.json  query-61dfdf758abb7a520b97adc9be74dcdacd44a0b47c56ed532292757208022ecf.json  query-67fed8fa1d51b4b6cf3c7abf2ad1ea042fcd9d0623d0c0da320b5546d94ae878.json  query-7c0e138bb107d6b4512bba01f14a8d846504943eb774ce5776142145f27f0c6b.json  query-7c3f88c72064c394045efcbe8f90c32b62ea5c78f4cf9943186a6ef32f5b825c.json  query-804522ee6aa1b231c7fd4fdc1b8972dca97dcfd79caeef0e6fa1a07f5bbce7fd.json  query-89057bf993ae0a6b871bd8c3c143d8b4b023386ba8035ee51c757b5e0d9413e2.json  query-90b89dc75fd28774bd3ab6b254d3b5f338b79f246617f03b863042c162a5d115.json  query-9777a28b72cd0a97c7de3b7c09155c3f2910df6e32d0b69bf2a215cd196a3e43.json  query-a2d35df6b9d0e5f451ccbf4065a3f5092f43c415df245703fde38f8f917c253c.json  query-a47b4b0be4447fa9a8cc8973754964afc510202298ace652ef98e063585aa74b.json  query-a685bf408c33936021043968c93baf409f8616d46a008173f4fdf12fe7049217.json  (+14 more)
(+74 files in other folders)
