[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.6"
clap = { version = "4.5.50", features = ["derive"] }
dotenvy = "0.15.7"
futures = "0.3.31"
jmap-client = { version = "0.4.0", features = ["websockets"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.48.0", default-features = false, features = ["net", "signal", "rt", "rt-multi-thread", "macros", "io-util"] }
tracing = { version = "0.1.41", features = ["async-await"] }
tracing-subscriber = "0.3.20"
