[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.6", features = ["macros", "ws"] }
clap = { version = "4.5.50", features = ["derive"] }
dotenvy = "0.15.7"
futures = "0.3.31"
jmap-client = { version = "0.4.0", features = ["websockets"] }
parking_lot = "0.12.5"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.48.0", default-features = false, features = ["net", "signal", "rt", "rt-multi-thread", "macros", "io-util"] }
tracing = { version = "0.1.41", features = ["async-await"] }
tracing-subscriber = "0.3.20"
url = { version = "2.5.7", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio-stream = { version = "0.1.17", features = ["sync"] }
tokio-util = { version = "0", features = ["io"] }
itertools = "0.14.0"
tower-http = { version = "0.6.6", features = ["cors"] }
derive_more = { version = "2.0.1", features = ["debug"] }
reqwest = { version = "0" }
http-body-util = "0"
